--- a/CrudApp/CrudApp.csproj
+++ b/CrudApp/CrudApp.csproj
@@ -242,6 +242,15 @@
     <Content Include="Scripts\App\Pages\Controllers\HomeController.js" />
     <Content Include="Scripts\App\IPLocation\Services\IpLocationService.js" />
     <Content Include="Scripts\App\LeafletJS\Services\LeafletMapService.js" />
+    <Content Include="Scripts\App\Pages\Controllers\SelectCoordinatesModalController.js" />
+    <Content Include="Scripts\App\Pages\Templates\selectCoordinatesModal.html" />
+    <Content Include="Scripts\bower_components\angular-bootstrap\.gitignore" />
+    <Content Include="Scripts\bower_components\angular-bootstrap\index.js" />
+    <Content Include="Scripts\bower_components\angular-bootstrap\ui-bootstrap-csp.css" />
+    <Content Include="Scripts\bower_components\angular-bootstrap\ui-bootstrap-tpls.js" />
+    <Content Include="Scripts\bower_components\angular-bootstrap\ui-bootstrap-tpls.min.js" />
+    <Content Include="Scripts\bower_components\angular-bootstrap\ui-bootstrap.js" />
+    <Content Include="Scripts\bower_components\angular-bootstrap\ui-bootstrap.min.js" />
     <Content Include="Scripts\bower_components\angular\angular-csp.css" />
     <Content Include="Scripts\bower_components\angular\angular.js" />
     <Content Include="Scripts\bower_components\angular\angular.min.js" />
@@ -612,6 +621,11 @@
     <Content Include="Scripts\bower_components\chosen\bower.json" />
     <Content Include="Scripts\bower_components\chosen\package.json" />
     <Content Include="Scripts\bower_components\chosen\README.md" />
+    <Content Include="Scripts\bower_components\angular-bootstrap\.bower.json" />
+    <Content Include="Scripts\bower_components\angular-bootstrap\.npmignore" />
+    <Content Include="Scripts\bower_components\angular-bootstrap\bower.json" />
+    <Content Include="Scripts\bower_components\angular-bootstrap\package.json" />
+    <Content Include="Scripts\bower_components\angular-bootstrap\README.md" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -633,8 +647,6 @@
     <Content Include="Scripts\project.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Scripts\services\project.services.IP.js" />
-    <Content Include="Scripts\services\project.services.Leaflet.js" />
     <Content Include="Scripts\Theme\icheck\icheck.min.js" />
     <Content Include="Scripts\Theme\jquery.flexslider-min.js" />
     <Content Include="Scripts\Theme\jquery.mixitup.min.js" />
