--- a/CrudApp/CrudApp.csproj
+++ b/CrudApp/CrudApp.csproj
@@ -231,6 +231,7 @@
     <Compile Include="Models\Responses\ItemsResponse.cs" />
     <Compile Include="Models\Responses\SuccessResponse.cs" />
     <Compile Include="Models\ViewModels\BaseVm.cs" />
+    <Compile Include="Models\ViewModels\RedirectResponseVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ArchiveService.cs" />
     <Compile Include="Services\BaseService.cs" />
@@ -243,6 +244,8 @@
     <Content Include="Content\Theme\Images\higherOpacity.png" />
     <Content Include="Content\Theme\Images\lowerOpacity.png" />
     <Content Include="Scripts\App\Archive\Services\documentHttpService.js" />
+    <Content Include="Scripts\App\Archive\Services\mapHttpService.js" />
+    <Content Include="Scripts\App\Archive\Services\pictureHttpService.js" />
     <Content Include="Scripts\App\Pages\Controllers\ContributeController.js" />
     <Content Include="Scripts\App\Pages\Controllers\HomeController.js" />
     <Content Include="Scripts\App\IPLocation\Services\IpLocationService.js" />
@@ -701,7 +704,7 @@
     <Content Include="Views\Home\GoLocal.cshtml" />
     <Content Include="Views\Home\Search.cshtml" />
     <Content Include="Views\Home\Contribute.cshtml" />
-    <Content Include="Views\Home\Success.cshtml" />
+    <Content Include="Views\Home\Redirect.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
